--- a/ios-developer.html
+++ b/ios-developer.html
@@ -44,19 +44,19 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1957ED4B8D'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1957ED4B8D'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://batmaid.join.com/jobs/265873-senior-ios-swift-developer'>Job @ Batmaid.ch (Warsaw): Senior iOS Swift Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://batmaid.join.com/jobs/265873-senior-ios-swift-developer'>Job @ Batmaid.ch (Warsaw): Senior iOS Swift Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oE5J7fwj'>The Havas Group Careers - Senior iOS Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oE5J7fwj'>The Havas Group Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -117,7 +117,7 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
+<h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -125,7 +125,7 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8470/ios-developer/job'>iOS Developer in Boston, Massachusetts ... - Careers at Grubhub</a></h5> 
+<h5><a href='https://careers-grubhub.icims.com/jobs/8470/ios-developer/job'>iOS Developer in Boston, Massachusetts ... - Careers at Grubhub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... 1 Federal St 6th Floor, Boston, MA 02110 is now hiring a iOS Developer in 
 Boston, Massachusetts. Review all of the job details and apply today!</p>
@@ -150,7 +150,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama ...</a></h5> 
+<h5><a href='https://santoranakama.applytojob.com/apply/Usr4PWiR9i/LeadSenior-IOS-Developer-Panya-Studios'>Lead/Senior iOS Developer | Panya Studios - Santora Nakama ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Panya Studios is changing the way the world interact with live video. After 
 building the fastest growing app out of SEA in 2018 we're now providing white-
@@ -164,7 +164,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
+<h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 ???? ????? ... Apply online for the job of iOS Developer at Wheely.</p>
 <hr/>
@@ -172,7 +172,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/objectstream/jobs/4363553002'>Job Application for Native iOS Mobile Application Developer at Objectstream</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/objectstream/jobs/4363553002'>Job Application for Native iOS Mobile Application Developer at Objectstream</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -192,7 +192,7 @@ label.</p>
 <p><span class="badge badge-light">San Francisco Santiago San Francisco, California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/researchinnovations.com/398a7a03-f792-40db-8899-00c6c5042d55'>Research Innovations - iOS Applications Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/398a7a03-f792-40db-8899-00c6c5042d55'>Research Innovations - iOS Applications Developer</a></h5> 
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -208,7 +208,7 @@ label.</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/b57b022c-f495-4f2d-a53a-8e5ed67f7379'>vpTech - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/b57b022c-f495-4f2d-a53a-8e5ed67f7379'>vpTech - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -224,7 +224,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -244,7 +244,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
+<h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -364,7 +364,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
+<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
@@ -422,7 +422,7 @@ Canada.</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://and-digital.workable.com/j/4DFB8EA379'>AND Digital - Jobs: Senior iOS Developer (Leeds) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://and-digital.workable.com/j/4DFB8EA379'>AND Digital - Jobs: Senior iOS Developer (Leeds) - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -466,7 +466,7 @@ Canada.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
