Job Application for Principal UX & Product Designer at Conductor. Job @ KI Group (Cologne): Product Owner | JOIN. Job Application for Senior Product Manager (Baltimore) at Ad Hoc. Job Application for Associate Product Manager at Guild Education. Product Manager - Cross Border Bill Pay - Western Union Careers. Job Application for Product Manager - Integrations at Human Interest. Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters. Ingram Micro Careers - Senior Product Manager. Brandwatch Careers - Senior Product Manager. ThinkHR - Technical Product Manager. ThinkHR - Senior Product Manager – Conversational AI.       Product Manager - Relogix     . Product Owner (PO) – Analista Sênior - Experian Careers. Farfetch Careers - Senior UI/UX Product Designer. Farfetch Careers - (Senior) Product Manager - Mobile. Farfetch Careers - Product Manager - Backend. Liferay, Inc. Careers - Product Designer. Brandwatch Careers - Data Product Manager. Job Application for Product Designer  at SafetyCulture. Job @ MIACAR (Zürich): (Senior) Product Owner MIAC... | JOIN. TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote).       Senior Product Designer (m/w/d) - Caseking GmbH     . Tide Business Banking - Jobs: Product Owner - Credit - Apply online.  Talix Careers - Product Manager. Job @ Tundra Inc (Zürich): Product Manager | JOIN. Job Application for Product Manager, Risk & Anti-fraud at SumUp. Job Application for Product Manager, Payments at Vimeo. vpTech - Product Owner Media Production H/F. SugarCRM Careers - (Senior) Technical Product Manager - 2090. Skytap - Principal Product Manager. Coffee Meets Bagel - Product Designer. Numbrs Personal Finance AG Careers - Product Owner. Job Application for Junior Product Designer at Handshake. Publicis Groupe Product Owner (m/w/d) | SmartRecruiters. Job Application for Senior Product Designer at Lightspeed ENG. Broadridge Business Analyst/Product Manager | SmartRecruiters.     Product Designer  at Blink . 

--- a/product-manager.html
+++ b/product-manager.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1791830'>Job Application for Associate Product Manager at Guild Education</a></h5> 
+<h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1791830'>Job Application for Associate Product Manager at Guild Education</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -206,7 +206,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
+<h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -261,7 +261,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/nxtlevel/job/ksskf1ek74euf8ssfxdgo88euc'>Product Manager, IAM | NxT Level</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/nxtlevel/job/ksskf1ek74euf8ssfxdgo88euc'>Product Manager, IAM | NxT Level</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -387,7 +387,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/oCNAafwT'>LinkedIn Careers - Anaplan Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oCNAafwT'>LinkedIn Careers - Anaplan Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -405,7 +405,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zomato.recruitee.com/o/product-designer'>
+<h5><a href='https://zomato.recruitee.com/o/product-designer'>
       Product Designer - Zomato
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -445,7 +445,7 @@ Munich (published: 15.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/easyknock/jobs/4364416002'>Job Application for Product Manager at EasyKnock</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/easyknock/jobs/4364416002'>Job Application for Product Manager at EasyKnock</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
